# aiki110

./: .gitignore
src/maott4996_agenter/: package.xml  setup.cfg  setup.py
src/maott4996_agenter/maott4996_agenter/: bevegelsesnode.py  lysdiodenode.py  motornode.py
src/maott4996_bryter/: setup.py
src/maott4996_bryter/maott4996_bryter/: bryter_monitor.py  bryter_service.py
src/maott4996_oblig2/: package.xml  setup.cfg  setup.py
src/maott4996_oblig2/maott4996_oblig2/: maott4996terninglytter.py  maott4996terningtriller.py
src/maott4996_sign/: CMakeLists.txt  package.xml
