<?xml version="1.0"?>
<package format="3">
  <name>maott4996_sign</name>
  <version>0.0.0</version>
  <description>Signaler og tjenestedefinisjoner for maott4996-roboten</description>
  <maintainer email="maott4996@todo.todo">maott4996</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
